properly handle the aro installation path. Retrieve it from ATK property file